[package]
name = "kimchi-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
